--- a/AsyncProfilingDemo.Web/AsyncProfilingDemo.Web.csproj
+++ b/AsyncProfilingDemo.Web/AsyncProfilingDemo.Web.csproj
@@ -119,6 +119,7 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ProfileActionAttribute.cs" />
     <Compile Include="App_Start\NinjectWebCommon.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\TestController.cs" />
